[Media>UI] Apply throttling if the notification is updated too frequently

There's a issue where the notification is updated too frequently
(especially when the media metadata or fallback media metadata changes),
which can cause the system UI to be very janky or even a system crash.
This CL throttles the notification update if the notification has been
updated during the previous 500ms.

BUG=711730

Review-Url: https://codereview.chromium.org/2833493002
Cr-Commit-Position: refs/heads/master@{#466651}

Former-commit-id: bf4103d69a0d7e289266c9671c2b980d585c0d5a